--- a/src/app/components/adminprofile/adminprofile.component.html
+++ b/src/app/components/adminprofile/adminprofile.component.html
@@ -41,13 +41,13 @@
             <h1 style="text-align: center;margin-top: 20px;">ADMIN PROFILE</h1>
             <br>
             <h3 style="text-align: center;margin-top: 20px;">USERNAME</h3>
-            <div class="pfile" *ngFor="let user of users" style="margin-left: 300px;"> 
+            <div class="pfile" style="margin-left: 300px;"> 
                 <br><br>
-                <p><b>ID: {{user.regno}} </b></p>
+                <p><b>ID: {{ureg}} </b></p>
                 <br>
-                <p><b>Username: {{user.username}} </b></p>
+                <p><b>Username: {{uname}} </b></p>
                 <br>
-                <p><b>Email: {{user.email}} </b></p>
+                <p><b>Email: {{uemail}} </b></p>
                 <br><br>
             </div>
       </div>
