--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+
     <div class="container-shadow"></div>
     <div class="container">
       <div class="wrap">
@@ -20,8 +20,7 @@
           </form>
           <br>
           <label  style="margin-left: 90px;">Not Yet Registered?</label>
-          <a routerLink="/sign" style="margin-left: 160px;color: whitesmoke;font-size: 20px;">SIGNUP</a>
+          <a routerLink="/signup" style="margin-left: 160px;color: whitesmoke;font-size: 20px;">SIGNUP</a>
         </div>
       </div>
     </div>
-  </body>
