--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -27,8 +27,8 @@
                       <img src="../../../assets/img.jpg" width="40" height="40" class="d-inline-block align-top" style="margin-left: 10px;margin-top: -10px;">
                       <p class="navit">INCEPTION WAVE</p>
                     </a>
-                    <a class="navbar-brand" routerLink="/dashboard">
-                        <img src="../../../assets/dash.PNG" width="40" height="40" class="d-inline-block align-top" style="margin-left: 0px;margin-top: -10px;">
+                    <a class="navbar-brand" (click)="dash()">
+                        <img src="../../../assets/dash.PNG" width="40" height="40"  class="d-inline-block align-top" style="margin-left: 0px;margin-top: -10px;">
                         <p class="navit">DASHBOARD</p>
                     </a>
                   </nav>
@@ -41,18 +41,16 @@
             <h1 style="text-align: center;margin-top: 20px;">MY PROFILE</h1>
             <br>
             <h3 style="text-align: center;margin-top: 20px;">USERNAME</h3>
-            <div class="pfile"  *ngFor="let user of users" style="margin-left: 300px;">
-                <div>
+            <div class="pfile" style="margin-left: 300px;">
+                <div > 
                     <br><br>
-                    <p><b>{{user.regno}}</b></p>
+                    <p><b>REG NO:{{ureg}}</b></p>
                     <br>
-                    <p><b>Username:{{user.username}} </b></p>
+                    <p><b>Username:{{uname}} </b></p>
                     <br>
-                    <p><b>Email:{{user.email}}</b></p>
+                    <p><b>Email:{{uemail}}</b></p>
                     <br>
-                    <p><b>Joining Date: 18/03/2020 </b></p>
-                    <br>
-                    <p><b>Mentor Name: {{user.options}} </b></p>
+                    <p><b>Mentor ID: {{uopt}} </b></p>
                     <br><br>
                 </div>
             </div>
