--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -22,12 +22,12 @@
           <div class="form-group">
             <label for="profs">Please Select a mentor:</label>
             <br>
-            <select name="profs" id="profs" style="background-color: aliceblue;color: black;width: 100px;margin-left: 150px;font-size: 20px;margin-top: -50px;width: 100px;height: 40px;">
-              <option style="font-size: 15px;" value="100503" name="options" [(ngModel)]="registerUserData.options">100503</option>
-              <option style="font-size: 15px;" value="100507" name="options" [(ngModel)]="registerUserData.options">100507</option>
-              <option style="font-size: 15px;" value="100511" name="options" [(ngModel)]="registerUserData.options">100511</option>
-              <option style="font-size: 15px;" value="100959" name="options" [(ngModel)]="registerUserData.options">100959</option>
-              <option style="font-size: 15px;" value="101296" name="options" [(ngModel)]="registerUserData.options">101296</option>
+            <select name="profs" id="profs" [(ngModel)]="registerUserData.options" style="background-color: aliceblue;color: black;width: 100px;margin-left: 150px;font-size: 20px;margin-top: -50px;width: 100px;height: 40px;">
+              <option style="font-size: 15px;" value="100503" name="options" >100503</option>
+              <option style="font-size: 15px;" value="100507" name="options" >100507</option>
+              <option style="font-size: 15px;" value="100511" name="options" >100511</option>
+              <option style="font-size: 15px;" value="100959" name="options" >100959</option>
+              <option style="font-size: 15px;" value="101296" name="options" >101296</option>
             </select>
           </div>
           <div class="form-group">
