--- a/src/app/components/admindash/admindash.component.html
+++ b/src/app/components/admindash/admindash.component.html
@@ -39,21 +39,9 @@
             <h1 style="text-align: center;margin-top: 20px;">INTERNSHIP TASKS</h1>
             <div style="margin-top: 70px;">
                 <ul >
-                    <li class="card tname"*ngFor="let user of users1"><a class="atname" routerLink="/eachintern"><b>{{user.username}}</b></a></li>
+                    <li class="card tname"*ngFor="let user of users1"><a class="atname" (click)="eachint(user)"><b>{{user.username}}</b></a></li>
                     <!-- <li class="card tname"><a class="atname" routerLink="/eachintern"><b>Intern name 2</b></a></li> -->
                 </ul>
             </div>
       </div>
     </div>
-
-    <!--
-        <ul>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 1</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 2</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 3</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 4</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 5</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 6</b></a></li>
-                    <li class="card tname"><a class="atname" routerLink="/task"><b>Task 7</b></a></li>
-                </ul> 
-    -->
