--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,9 @@
-
+    <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <strong style="margin-left: 20px;">
+        If already logged in: Click Here: <button type="button" (click)="allog()" style="float: right;margin-top: -5px;margin-right: 100px;background-color: white;">GO to Dashboard</button>
+      </strong>
+    </div>
     <div class="container-shadow"></div>
     <div class="container">
       <div class="wrap">
