--- a/src/app/components/addtask/addtask.component.html
+++ b/src/app/components/addtask/addtask.component.html
@@ -9,13 +9,13 @@
 
             <ul class="list-unstyled components">
                 <li>
-                    <a href="#">Profile</a>
+                    <a (click)="dash()">Back to all tasks</a>
                 </li>
                 <li>
-                    <a href="#">Tasks</a>
+                    <a routerLink="/adminprofile">Profile</a>
                 </li>
                 <li>
-                    <a href="#">Need Help?</a>
+                    <a onclick="alert('Chat not added')">CHAT</a>
                 </li>
             </ul>
         </nav>
@@ -27,10 +27,9 @@
                       <img src="../../../assets/img.jpg" width="40" height="40" class="d-inline-block align-top" style="margin-left: 10px;margin-top: -10px;">
                       <p class="navit">INCEPTION WAVE</p>
                     </a>
-                    <a class="navbar-brand" routerLink="/adminprofile">
-                        <img src="../../../assets/img2.png" width="40" height="40" class="d-inline-block align-top" style="margin-left: 0px;margin-top: -10px;">
-                        <p class="navit">PROFILE</p>
-                      </a>
+                    <a class="navbar-brand">
+                        <button style="margin-top: 5px;" class="btn" (click)="loggout()">LOGOUT</button>
+                    </a>
                   </nav>
                   <hr style="border: 1px black solid;margin-left: 35px;width: 1420px;">
                 <button type="button" id="sidebarCollapse" class="btn btn-info" style="margin-left: -10px;margin-top: 0px;">
